Fix pdf link in index.html

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <section id="mywork">
     <h2>PDF Portfolio</h2>
     <div class="pdf-container">
-        <iframe src="../ChangyueGao.github.io/portfolio/compressed.pdf" width="100%" height="600px">
+        <iframe src="portfolio/compressed.pdf" width="100%" height="600px">
             This browser does not support PDFs. Please download the PDF to view it:
-            <a href="../ChangyueGao.github.io/portfolio/compressed.pdf">Download PDF</a>.
+            <a href="portfolio/compressed.pdf">Download PDF</a>.
         </iframe>
     </div>
 </section>
